# jsrs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  notes.md
scripts/: install.sh
src/: ast_node.rs  binary_expression.rs  binary_op.rs  block.rs  call_expression.rs  expression_statement.rs  function.rs  function_declaration.rs  interpreter.rs  lib.rs  literal.rs  main.rs  marker.rs  object.rs  prelude.rs  return_statement.rs  util.rs  value.rs
src/ast/: ast_node.rs  binary_expression.rs  binary_op.rs  block.rs  call_expression.rs  expression_statement.rs  function_declaration.rs  literal.rs  marker.rs  mod.rs  return_statement.rs  value.rs
src/ast/expression/: binary_expression.rs  call_expression.rs  literal.rs  mod.rs  variable.rs
src/ast/ops/: binary.rs  mod.rs
src/ast/statement/: block_statement.rs  expression_statement.rs  function_declaration.rs  mod.rs  (+2 more)
src/ir/: marker.rs  mod.rs
src/parse/: conversions.rs  mod.rs  parser.rs
src/parser/: conversions.rs  mod.rs
src/runtime/: console.rs  exception.rs  function.rs  interpreter.rs  literal_object.rs  mod.rs  object.rs  string.rs  value.rs
tests/: add.rs  from_js.rs  from_stdin.rs  manual_ir.rs  parse_analysis.rs
tests/common/: mod.rs
tests/input/: add_vars.js  aliased_go.js  assignment.js  branches.js  break.js  built_in.js  complicated.js  complicated2.js  empty_decl.js  exception.js  for.js  if.js  member.js  missing_parameter.js  object.js  parameters.js  parameters_expression.js  parse_analysis.js  recursion.js  return.js  simple.js  statement_branches.js  string.js  update.js
(+23 files in other folders)
