[package]
name = "javascript-rs"
version = "0.1.0"
authors = ["Shane Murphy <shaneeverittmurphy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ressa = "0.7.1"
resast = "0.4.1"
itertools = "0.10.0"
#clap = "2.33.3"
