[package]
name = "jsrs"
version = "0.1.0"
authors = ["Shane Murphy <shaneeverittmurphy@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
license-file = "LICENSE-APACHE, LICENCE-MIT"

[dependencies]
ressa = "0.7.1"
resast = "0.4.1"
itertools = "0.10.0"
thiserror = "1.0.24"
jsrs_derive = { path = "../jsrs_derive" }

[features]
suppress_exceptions = []